--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="#0000ff">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="A resource for fitness information and tools">
-    <link rel="author" content="Levi Wright">
+    <link rel="author" content="Levi Wright" href="https://github.com/law973">
     <style>@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');</style>
     <title>Pneumatic</title>
   </head>
