--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <meta name="description" content="A resource for fitness information and tools">
     <link rel="author" content="Levi Wright" href="https://github.com/law973">
     <title>Pneumatic - Fitness Information & Tools</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+    </style>
   </head>
   <body>
     <div id="root"></div>
